--- a/website/index.html
+++ b/website/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript" src="../jsmodeler/jsmodeler.js"></script>
 	<script type="text/javascript" src="../jsmodeler/jsmodeler.ext.three.js"></script>
 
+	<script type="text/javascript" src="../jsmodeler/jszip.js"></script>
 	<script type="text/javascript" src="include/floatingdialog.js"></script>
 	<script type="text/javascript" src="include/importerviewer.js"></script>
 	<script type="text/javascript" src="include/importermenu.js"></script>
