--- a/website/index.html
+++ b/website/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" type="text/css" href="include/importerapp.css">
 	<link rel="stylesheet" type="text/css" href="include/floatingdialog.css">
+	<script type="text/javascript" src="../jsmodeler/axios.min.js"></script>
 
 	<script type="text/javascript" src="../jsmodeler/three.min.js"></script>
 	<script type="text/javascript" src="../jsmodeler/jsmodeler.js"></script>
