--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="include/importerapp.css">
 	<link rel="stylesheet" type="text/css" href="include/floatingdialog.css">
 	<script type="text/javascript" src="../jsmodeler/axios.min.js"></script>
-
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="../jsmodeler/three.min.js"></script>
 	<script type="text/javascript" src="../jsmodeler/jsmodeler.js"></script>
 	<script type="text/javascript" src="../jsmodeler/jsmodeler.ext.three.js"></script>
@@ -83,19 +84,19 @@
 			display: none;
 			font-size: 30px;
 			text-align: center;
-			min-width: 200px;
-			min-height: 30px;
+			background-color: none;
+			padding: 20px;
 		}
 		</style>
 </head>
 
 <body>
 	<div id="top"></div>
-
 	<!-- <div id="left"> -->
 		<!-- <div id="menu"></div> -->
 	<!-- </div> -->
 	<div class="placeholder"></div>
+
 	<canvas id="example" width="0" height="0"></canvas>
 	<input type="file" id="file" style="display:none" multiple></input>
 </body>
