finish file type ('zip')

--- a/website/index.html
+++ b/website/index.html
@@ -95,6 +95,10 @@
 	<!-- <div id="left"> -->
 		<!-- <div id="menu"></div> -->
 	<!-- </div> -->
+	<div class="title-pop">
+		<div class="progress" style="width: 100%; height: 20px;">
+			<div class="progress-bar" role="progressbar"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+	</div>
 	<div class="placeholder"></div>
 
 	<canvas id="example" width="0" height="0"></canvas>
